adjusted styling so nav bar works correctly on mobile devices.

--- a/walking_wainwrights/static/css/style.css
+++ b/walking_wainwrights/static/css/style.css
@@ -7,8 +7,8 @@ body {
     margin: 0;
     padding: 0;
     background-color: black;
-    font-family: Roboto Mono, sans-serif;
-    line-height: 30px;
+    font-family: Lato, sans-serif;
+
 
 }
 
@@ -242,8 +242,11 @@ hr {
 @media only screen and (max-width: 480px) {
     .navbar-collapse {
         background-color: rgba(0, 0, 0, 0.8);
-        margin: -16px 0 11px;
         padding: 20px;
+        margin-top: 12px;
+        margin-left: -16px;
+        margin-right: -16px;
+
     }
 }
 
